--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: BuildTest
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
 
     - uses: actions/checkout@v4
@@ -26,15 +26,15 @@ jobs:
         distribution: temurin
         
     - name: Setup SonarCloud Scanner      
-      run: dotnet tool install --global dotnet-sonarscanner --tool-path ./.sonar/scanner
+      run: dotnet tool install --global dotnet-sonarscanner
       working-directory: src
                
     - name: Build
       run: |          
           dotnet tool install --global dotnet-coverage
 
-          ./.sonar/scanner/dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.exclusions="**.Database/**,**.Tests/**,**.WebApi*/**"
+          dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml /d:sonar.exclusions="**.Database/**,**.Tests/**,**.WebApi*/**"
           dotnet build --configuration Release
           dotnet-coverage collect 'dotnet test' -f xml -o 'coverage.xml'
-          ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
       working-directory: src
