--- a/.github/workflows/pipeline-build-main.yml
+++ b/.github/workflows/pipeline-build-main.yml
@@ -18,23 +18,20 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x        
-   
-    - name: Install dependencies
-      run: dotnet restore
+        
+    - name: Setup SonarCloud Scanner Tool
+      run: dotnet tool install --global dotnet-sonarscanner
       working-directory: src
 
-    - name: Build solution
-      run: dotnet build --no-restore --configuration Release
-      working-directory: src
-
-    - name: Run tests with coverage
-      run: dotnet test --no-build --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
-      working-directory: src  
+    - name: Setup .NET Coverage Tool
+      run: dotnet tool install --global dotnet-coverage
+      working-directory: src 
    
     - name: Build and Test Coverage Gathering
       run: |          
           dotnet tool install --global dotnet-sonarscanner
           dotnet-sonarscanner begin /k:"${{ secrets.PROJECT_KEY }}" /o:"${{ secrets.SONAR_ORGANIZATION }}" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.exclusions="**.Database/**,**.Tests/**,**.WebApi*/**"
-          dotnet build     
+          dotnet build --configuration Release
+          dotnet-coverage collect 'dotnet test' -f xml -o 'coverage.xml'
           dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
       working-directory: src
