--- a/src/AmberEggApi.Contracts/AmberEggApi.Contracts.csproj
+++ b/src/AmberEggApi.Contracts/AmberEggApi.Contracts.csproj
@@ -3,4 +3,8 @@
 		<ProjectGuid>{F2EDD5AF-AE53-4F1A-A921-97E40E88413D}</ProjectGuid>
 	</PropertyGroup>
 
+	<ItemGroup>		
+		<PackageReference Include="AutoMapper" />
+	</ItemGroup>
+
 </Project>
